# FreedomLogger

./: CHANGELOG  Cargo.toml  LICENSE  README.md  README_NL.md
examples/: basic_usage.rs
src/: lib.rs
src/core/: config.rs  logger.rs  mod.rs
src/core/writers/: json.rs  mod.rs  text.rs
src/error/: mod.rs  types.rs
src/format/: basic.rs  detailed.rs  mod.rs
src/rotation/: mod.rs  size_based.rs
